<resources>
    <string name="app_name">Admin Fast Order</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_soft_drinks_actitvity">MainActivity</string>
    <string name="title_Client_Orders">Orders</string>
    <string name="title_Soft_Drinks">Soft Drinks</string>
    <string name="title_Hard_Drinks">Hard Drinks</string>

    <string name="placeholder">Please select one of the drinks</string>
    <string name="deleteDrink">Please select one of the drinks to delete</string>
    <string name="ordersNotFound">No client orders found</string>
    <string name="clientOrders">Client Orders</string>
    <string name="plus">+</string>
    <string name="drinkName">Drink</string>
    <string name="drinkPrice">5</string>
    <string name="drinkAmount">1</string>
    <string name="hardDrinks">Hard Drinks</string>
    <string name="softDrinks">Soft Drinks</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="title_add_soft_drink">Add Soft Drink</string>
    <string name="title_add_hard_drink">Add Hard Drink</string>
    <string name="delete">Delete</string>
</resources>