<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/order_item_panel"
    android:orientation="horizontal"
    android:layout_marginBottom="20dp"
    android:layout_height="100dp">

    <LinearLayout
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:layout_width="220dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name"
            android:layout_marginTop="19dp"
            android:textSize="22sp"
            android:textColor="#000C5D"
            android:text="@string/drinkName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/drinkAmount"
            android:textColor="#ADADAD"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="125dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price"
            android:textSize="18sp"
            android:textColor="#F63EA5"
            android:layout_marginTop="8dp"
            android:text="@string/drinkPrice"
            android:gravity="right"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</LinearLayout>