<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".AdminOrdersActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="198dp">

        <TextView
            android:id="@+id/titlepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="18dp"
            android:text="@string/title_add_soft_drink"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="26sp" />

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:background="#131E69"
            android:layout_height="1dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/order_item_panel"
        android:orientation="vertical"
        android:paddingBottom="22dp"
        android:paddingTop="22dp">

        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_field"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputPrice"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_field"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/addbtn"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/canclebtn"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="22sp" />


</LinearLayout>