<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".AdminOrdersActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titlepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/hardDrinks"
                    android:textColor="#FFF"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/subtitlepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/placeholder"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddHardDrink"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:clickable="true"
                android:textAlignment="center"
                android:backgroundTint="@color/white"
                app:srcCompat="@android:drawable/ic_input_add" />


        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-60dp"
        android:layout_marginRight="16dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/addbtn"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="22sp" />


</LinearLayout>